--- a/app/assets/stylesheets/greeting.css
+++ b/app/assets/stylesheets/greeting.css
@@ -5,18 +5,18 @@
     background-color: transparent;
     height: 50px;
     padding: 20px;
-    z-index: 10;
+    z-index: 5;
     width: 100%;
     right: 1%;
 }
 
-.header-button:hover {
+.header-button:hover, .app-callout button:hover{
     background-color: white;
     color: black; 
     transition: .5s;
 }
 
-.header-button{
+.header-button, .app-callout button, .brewery-callout button{
     border-radius: 4px;
     font-weight: 600;
     background-color: transparent;
@@ -26,7 +26,8 @@
     padding: 12px 20px;
     font-family: 'Poppins', sans-serif;
     text-decoration: none;
-
+    font-size: 1em;
+    cursor: pointer;
 }
 
 .blackout {
@@ -36,3 +37,4 @@
     background-color: black;
     z-index: 4;
 }
+
