--- a/app/assets/stylesheets/api/splash.css
+++ b/app/assets/stylesheets/api/splash.css
@@ -144,6 +144,7 @@
     display: flex;
     flex-direction: column;
     height: 90%;
+    padding: 2px 0 5px 0;
 }
 
 .form-top, .formBottom{
@@ -169,7 +170,7 @@
     box-shadow: 1px 1px 1px grey;
     font-weight: 500;
     color: grey;
-    margin: 5% 0% 0% 0%;
+    /* margin: 5% 0% 0% 0%; */
 }
 
 .session-submit {
