--- a/app/assets/stylesheets/greeting.css
+++ b/app/assets/stylesheets/greeting.css
@@ -38,3 +38,19 @@
     z-index: 4;
 }
 
+.error {
+    position: relative;
+    /* align-self: center; */
+    text-align: center;
+    background-color: #e25858;
+    font-family: 'Poppins', sans-serif;
+    font-size: 10px;
+    color: white;
+    border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
+}
+
+.error-box {
+    height: 14px;
+    padding: 3px 0;
+}
