--- a/app/assets/stylesheets/api/splash.css
+++ b/app/assets/stylesheets/api/splash.css
@@ -311,7 +311,7 @@
     padding-top: 0;
 }
 
-#get-app-button, #claim-brewery{
+#get-app-button, #claim-brewery, #header-logout{
     padding: 2px 20px;
     margin-left: 3%;
 }
@@ -400,7 +400,7 @@
     transition: .5s;
 }
 
-#footer-nav button {
+#footer-nav button, .left-header button {
     background: none;
 	color: white;
 	border: none;
