--- a/app/assets/stylesheets/greeting.css
+++ b/app/assets/stylesheets/greeting.css
@@ -54,3 +54,66 @@
     height: 14px;
     padding: 3px 0;
 }
+
+.session-header{
+    background-color: #fc0;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 52px;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+}
+
+
+.header-logo {
+    width: 150px;
+    height: 38px;
+    padding-right: 4%;
+}
+
+.header-user {
+    width: 36px;
+    height: 36px;
+    display: block;
+    border-radius: 18px;
+    overflow: hidden;
+    margin: 7.5px 0;
+}
+
+.left-header, .right-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.left-header button {
+    font-size: 16px;
+    white-space: nowrap;
+}
+
+.right-header {
+    width: 15%;
+    white-space: nowrap;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #2c2c2c;
+    color: white;
+    width: 200px;
+    z-index: 1;
+    top: 50px;
+    padding: 12px;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
