--- a/app/assets/stylesheets/api/breweries.scss
+++ b/app/assets/stylesheets/api/breweries.scss
@@ -25,14 +25,14 @@
 }
 
 .brewery-name {
-    font-size: 30px;
+    font-size: 20px;
     font-family: 'Poppins', sans-serif;
     text-decoration: none;
     color: #c60;
 }
 
 .brewery-location {
-    font-size: 20px;
+    font-size: 14px;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -56,6 +56,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 1px solid #e2e2e2;
 }
 
 .brewery-list-item-right {
@@ -67,10 +68,19 @@
     font-size: 14px;
 }
 
+.brewery-list-item-left {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    padding-left: 10px;
+}
+
 .side-by-side {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    white-space: nowrap;
 }
 
 .side-by-side h4 {
@@ -80,4 +90,9 @@
 .brewery-list-item-right h4 {
     border-left: 2px solid #e2e2e2;
     padding: 4px;
+}
+
+.brewery-logo {
+    height: 60px;
+    width: 60px;
 }
