--- a/app/assets/stylesheets/api/breweries.scss
+++ b/app/assets/stylesheets/api/breweries.scss
@@ -24,7 +24,7 @@
 
 }
 
-.brewery-name {
+.brewery-name, .beer-name {
     font-size: 20px;
     font-family: 'Poppins', sans-serif;
     text-decoration: none;
@@ -57,6 +57,7 @@
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #e2e2e2;
+    width: 100%;
 }
 
 .brewery-list-item-right {
@@ -95,5 +96,80 @@
 .brewery-logo {
     height: 60px;
     width: 60px;
+}
+
+.brewery-header-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: auto;
+    background-color: white;
+}
+
+.brewery-description {
+    width: 90%;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    color: #999;
+}
+
+.brewery-header-inner {
+    width: 90%;
+
+}
+
+.beer-label {
+    height: 80px;
+    width: 80px;
+    padding: 12px;
+}
+
+.brewery-logo-show {
+    height: 120px;
+    width: 120px;
+}
+
+
+.beers-list {
+    background-color: white;
+    padding-top: 5%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+}
+
+.beer-container-bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-top: 2px solid #e2e2e2;
+    border-bottom: 2px solid #e2e2e2;
+}
+
+.beer-container-top {
+    display: flex;
+    align-items: center;
+}
+
+.beer-container {
+    width: 90%;
+    font-family: 'Poppins', sans-serif;
+
+}
+
+.beer-info {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.beer-info h3 {
+    font-size: 12px;
+}
+
+.beer-info h4 {
+    font-size: 10px;
 }
 
