--- a/app/assets/stylesheets/api/splash.css
+++ b/app/assets/stylesheets/api/splash.css
@@ -400,14 +400,15 @@
     transition: .5s;
 }
 
-#footer-nav button, .left-header button {
+#footer-nav button, .left-header button, .left-header-link {
     background: none;
 	color: white;
 	border: none;
     font-family: 'Poppins', sans-serif;
     font-weight: 200;
     font-size: 20px;
-	cursor: pointer;
+    cursor: pointer;
+    
 }
 
 #footer-nav button:hover {
