--- a/app/assets/stylesheets/greeting.css
+++ b/app/assets/stylesheets/greeting.css
@@ -88,7 +88,7 @@
     justify-content: space-evenly;
 }
 
-.left-header button {
+.left-header button, .left-header-link {
     font-size: 16px;
     white-space: nowrap;
 }
