--- a/app/assets/stylesheets/greeting.css
+++ b/app/assets/stylesheets/greeting.css
@@ -91,6 +91,7 @@
 .left-header button, .left-header-link {
     font-size: 16px;
     white-space: nowrap;
+    text-decoration: none;
 }
 
 .right-header {
