--- a/frontend/components/beer/review.css
+++ b/frontend/components/beer/review.css
@@ -67,3 +67,15 @@
     width: 100%;
     border: 1px solid #eee;
 }
+
+.review-photo {
+    width: 100%;
+}
+
+.review-photo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    max-height: 180px;
+}
