--- a/frontend/components/the_pub/the_pub.css
+++ b/frontend/components/the_pub/the_pub.css
@@ -1,3 +1,24 @@
 .reviews {
     width: 90%;
 }
+
+.more-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.more-reviews-button {
+    cursor: pointer;
+    padding: 1vw 0;
+    background-color: #fc0;
+    color: white;
+    width: 90%;
+    font-size: 1.2em;
+    margin: 2vw 0;
+    font-weight: bold;
+    border: 1px solid lightgrey;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+}
