remove logger/ fix modal

--- a/frontend/components/brewery_index/brewery_modal.css
+++ b/frontend/components/brewery_index/brewery_modal.css
@@ -16,7 +16,7 @@
   z-index: 11;
   background-color: white;
   width: 45vw;
-  height: 40vh;
+  height: fit-content;
   font-family: 'Poppins', sans-serif;
 }
 
